<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="10dp"
    android:background="@color/Transparent">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/game_over_txt"
        android:textSize="40sp"
        android:textStyle="bold"
        android:textColor="@color/Black"
        android:fontFamily="@font/ketchup_font"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/play_again_txt"
        android:textSize="20sp"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textColor="@color/Black"
        android:fontFamily="@font/alef_regular"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/yesTxt"
            android:textSize="20sp"
            android:textAllCaps="false"
            android:fontFamily="@font/alef_regular"
            android:background="@drawable/button_selector"
            android:id="@+id/yesBtn"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/noTxt"
            android:textSize="20sp"
            android:textAllCaps="false"
            android:fontFamily="@font/alef_regular"
            android:background="@drawable/button_selector"
            android:id="@+id/noBtn"/>
    </LinearLayout>
</LinearLayout>