<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_centerInParent="true"
    android:layout_alignParentTop="true"
    android:background="@color/Transparent">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/dialogTitle"
        android:gravity="center_vertical|center"
        android:padding="10dp"
        android:text="@string/SettingsTxt"
        android:textSize="40sp"
        android:textStyle="bold"
        android:textColor="@color/Black"
        android:fontFamily="@font/ketchup_font"/>
    <LinearLayout
        android:id="@+id/body"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:gravity="center"
        android:orientation="vertical">
        <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_margin="10dp"
            android:text="@string/backgroundMusicTxt"
            android:textStyle="bold"
            android:textSize="20sp"
            android:fontFamily="@font/alef_regular"
            android:id="@+id/backgroundMusicSwitch"
            android:checked="true"/>
        <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_margin="10dp"
            android:text="@string/soundEffectTxt"
            android:textStyle="bold"
            android:textSize="20sp"
            android:fontFamily="@font/alef_regular"
            android:id="@+id/soundEffectsSwitch"
            android:checked="true"/>
        <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_margin="10dp"
            android:text="@string/vibrationTxt"
            android:textStyle="bold"
            android:textSize="20sp"
            android:fontFamily="@font/alef_regular"
            android:id="@+id/vibrationSwitch"
            android:checked="true"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/SaveTxt"
            android:textAllCaps="false"
            android:fontFamily="@font/alef_regular"
            android:textStyle="bold"
            android:textSize="20sp"
            android:background="@drawable/button_selector"
            android:id="@+id/saveBtn"/>
    </LinearLayout>
</LinearLayout>