<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="center"
    tools:context=".MainFragment"
    android:orientation="vertical"
    android:background="@color/Transparent"
    android:layout_centerInParent="true"
    android:layout_alignParentTop="true">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ChooseLevelTxt"
        android:textAlignment="center"
        android:layout_margin="10dp"
        android:textSize="30sp"
        android:textColor="@color/Black"
        android:padding="10dp"
        android:textStyle="bold"
        android:fontFamily="@font/ketchup_font"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/easyTxt"
            android:textColor="@color/Black"
            android:layout_margin="10dp"
            android:padding="10dp"
            android:textSize="25sp"
            android:textAllCaps="false"
            android:textStyle="bold"
            android:background="@drawable/button_selector"
            android:id="@+id/easyBtn"
            android:fontFamily="@font/alef_regular"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mediumTxt"
            android:textColor="@color/Black"
            android:layout_margin="10dp"
            android:padding="10dp"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textAllCaps="false"
            android:background="@drawable/button_selector"
            android:id="@+id/mediumBtn"
            android:fontFamily="@font/alef_regular"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hardTxt"
            android:textColor="@color/Black"
            android:textStyle="bold"
            android:layout_margin="10dp"
            android:padding="10dp"
            android:textSize="25sp"
            android:textAllCaps="false"
            android:background="@drawable/button_selector"
            android:id="@+id/hardBtn"
            android:fontFamily="@font/alef_regular"/>
    </LinearLayout>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/timerModeTxt"
        android:textColor="@color/Black"
        android:textStyle="bold"
        android:layout_margin="10dp"
        android:padding="10dp"
        android:textSize="25sp"
        android:textAllCaps="false"
        android:background="@drawable/button_selector"
        android:id="@+id/timerModeBtn"
        android:fontFamily="@font/alef_regular"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/two_players"
        android:textColor="@color/Black"
        android:layout_margin="10dp"
        android:padding="10dp"
        android:textSize="25sp"
        android:textAllCaps="false"
        android:textStyle="bold"
        android:background="@drawable/button_selector"
        android:id="@+id/versusBtn"
        android:fontFamily="@font/alef_regular"/>
</LinearLayout>