<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_centerInParent="true"
    android:layout_alignParentTop="true"
    android:background="@color/Transparent">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/player_details_txt"
        android:textSize="40sp"
        android:textStyle="bold"
        android:textColor="@color/Black"
        android:fontFamily="@font/ketchup_font"
        android:layout_gravity="center"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:padding="10dp"
        android:textSize="20sp"
        android:textColor="@color/Black"
        android:hint="@string/player_1_name_hint"
        android:textAlignment="center"
        android:textStyle="bold"
        android:fontFamily="@font/alef_regular"
        android:id="@+id/player1Input"
        android:imeOptions="actionGo"
        android:inputType="textPersonName"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:padding="10dp"
        android:textSize="20sp"
        android:textColor="@color/Black"
        android:hint="@string/player_2_name_hint"
        android:textAlignment="center"
        android:textStyle="bold"
        android:fontFamily="@font/alef_regular"
        android:id="@+id/player2Input"
        android:imeOptions="actionGo"
        android:inputType="textPersonName"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:padding="10dp"
        android:background="@drawable/button_selector"
        android:text="@string/submitTxt"
        android:textAllCaps="false"
        android:fontFamily="@font/alef_regular"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_gravity="center"
        android:id="@+id/submitBtn"/>
</LinearLayout>