<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@color/Transparent"
    android:layout_centerInParent="true"
    android:layout_alignParentTop="true"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:padding="5dp"
        android:fontFamily="@font/alef_regular"
        android:text="@string/get_ready_txt"
        android:textColor="@color/Black"
        android:textSize="40sp"
        android:textStyle="bold"/>
    <TextView
        android:id="@+id/tvTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/alef_regular"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/third"
        android:textColor="@color/Black"
        android:textSize="60sp"
        android:textStyle="bold"/>
    <TextView
        android:id="@+id/tvHint"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:fontFamily="@font/alef_regular"
        android:gravity="center_horizontal"
        android:text="@string/champion_hint"
        android:textColor="@color/Black"
        android:textSize="25sp"
        android:textStyle="bold|italic"/>
</LinearLayout>