<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/Transparent"
    android:layout_alignParentTop="true">
    <nl.dionsegijn.konfetti.KonfettiView
        android:id="@+id/viewKonfetti"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_gravity="center"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/congratulationsTxt"
            android:textSize="40sp"
            android:textStyle="bold"
            android:textColor="@color/Black"
            android:fontFamily="@font/ketchup_font"
            android:layout_gravity="center"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/broke_record_txt"
            android:textSize="20sp"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textColor="@color/Black"
            android:fontFamily="@font/alef_regular"
            android:layout_gravity="center"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:padding="10dp"
            android:textSize="20sp"
            android:textColor="@color/Black"
            android:hint="@string/name_hint_txt"
            android:textAlignment="center"
            android:textStyle="bold"
            android:fontFamily="@font/alef_regular"
            android:id="@+id/nameInput"
            android:imeOptions="actionGo"
            android:inputType="textPersonName"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:padding="10dp"
            android:background="@drawable/button_selector"
            android:text="@string/submitTxt"
            android:textAllCaps="false"
            android:fontFamily="@font/alef_regular"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_gravity="center"
            android:id="@+id/submitBtn"/>
    </LinearLayout>
</FrameLayout>