<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="fill_horizontal|center"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:layout_marginStart="10dp"
        android:text="@string/rank_txt"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/Black"
        android:layout_alignParentStart="true"
        android:layout_gravity="center"
        android:textAlignment="center"
        android:fontFamily="@font/ketchup_font"
        android:id="@+id/rankTopic"/>
    <TextView
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:text="@string/nameTxt"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/Black"
        android:textAlignment="center"
        android:layout_toEndOf="@id/rankTopic"
        android:layout_gravity="center"
        android:fontFamily="@font/ketchup_font"
        android:id="@+id/nameOutput"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:layout_marginStart="10dp"
        android:text="@string/scoreTxt"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/Black"
        android:layout_toEndOf="@id/nameOutput"
        android:layout_gravity="center"
        android:fontFamily="@font/alef_regular"
        android:id="@+id/scoreOutput"/>
</RelativeLayout>