<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" 
    android:gravity="center"
    android:layout_centerInParent="true"
    android:background="@color/Transparent"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    <nl.dionsegijn.konfetti.KonfettiView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/winnerKonffetti"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:padding="10dp"
            android:textSize="40sp"
            android:textAllCaps="false"
            android:textStyle="bold"
            android:textColor="@color/Black"
            android:text="@string/game_finished_txt"
            android:fontFamily="@font/ketchup_font"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:textAllCaps="false"
            android:textStyle="bold"
            android:textColor="@color/Black"
            android:text="@string/the_winner_is_txt"
            android:fontFamily="@font/ketchup_font"
            android:id="@+id/winnerTopic"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/nameTxt"
                    android:textStyle="bold"
                    android:textColor="@color/Black"
                    android:textSize="20sp"
                    android:fontFamily="@font/alef_regular"
                    android:id="@+id/player1Name"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/scoreTxt"
                    android:textStyle="bold"
                    android:textColor="@color/Black"
                    android:textSize="20sp"
                    android:fontFamily="@font/alef_regular"
                    android:id="@+id/player1Score"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/nameTxt"
                    android:textStyle="bold"
                    android:textColor="@color/Black"
                    android:textSize="20sp"
                    android:fontFamily="@font/alef_regular"
                    android:id="@+id/player2name"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/scoreTxt"
                    android:textStyle="bold"
                    android:textColor="@color/Black"
                    android:textSize="20sp"
                    android:fontFamily="@font/alef_regular"
                    android:id="@+id/player2score"/>
            </LinearLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/play_again_txt"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/Black"
                android:fontFamily="@font/ketchup_font"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/yesTxt"
                    android:textSize="20sp"
                    android:textAllCaps="false"
                    android:fontFamily="@font/alef_regular"
                    android:background="@drawable/button_selector"
                    android:id="@+id/yesBtn"/>
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/noTxt"
                    android:textSize="20sp"
                    android:textAllCaps="false"
                    android:fontFamily="@font/alef_regular"
                    android:background="@drawable/button_selector"
                    android:id="@+id/noBtn"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</FrameLayout>