<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_centerInParent="true"
    android:layout_alignParentTop="true"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:orientation="vertical"
            android:gravity="center"
            android:background="@color/Transparent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/introductionMainContent">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textStyle="bold"
                android:textSize="50sp"
                android:textColor="@color/Black"
                android:layout_margin="10dp"
                android:padding="10dp"
                android:fontFamily="@font/ketchup_font"
                android:id="@+id/topic" />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/startTxt"
                android:textColor="@color/Black"
                android:layout_margin="10dp"
                android:padding="10dp"
                android:textSize="25sp"
                android:textAllCaps="false"
                android:textStyle="bold"
                android:drawableEnd="@drawable/start_icon"
                android:background="@drawable/button_selector"
                android:id="@+id/startBtn"
                android:fontFamily="@font/alef_regular" />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/SettingsTxt"
                android:textColor="@color/Black"
                android:layout_margin="10dp"
                android:padding="10dp"
                android:textSize="25sp"
                android:textAllCaps="false"
                android:textStyle="bold"
                android:drawableEnd="@drawable/settings"
                android:background="@drawable/button_selector"
                android:id="@+id/settingsBtn"
                android:fontFamily="@font/alef_regular"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/leader_boards_text"
                android:textColor="@color/Black"
                android:layout_margin="10dp"
                android:padding="10dp"
                android:textSize="25sp"
                android:textAllCaps="false"
                android:textStyle="bold"
                android:drawableEnd="@drawable/leaderboards"
                android:drawableStart="@drawable/leaderboards"
                android:background="@drawable/button_selector"
                android:id="@+id/leaderboardsBtn"
                android:fontFamily="@font/alef_regular"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>