<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="wrap_content"
    android:layout_width="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="5dp"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_centerInParent="true"
    android:layout_alignParentTop="true"
    android:background="@color/Transparent">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/leader_boards_text"
        android:textSize="40sp"
        android:textStyle="bold"
        android:textColor="@color/Black"
        android:layout_margin="5dp"
        android:fontFamily="@font/ketchup_font"/>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/easyTxt"
            android:textSize="25sp"
            android:textStyle="bold"
            android:fontFamily="@font/alef_regular"
            android:layout_margin="5dp"
            android:background="@drawable/button_selector"
            android:id="@+id/easy_button"
            android:textAllCaps="false"
            android:layout_alignParentStart="true"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mediumTxt"
            android:textStyle="bold"
            android:textSize="25sp"
            android:fontFamily="@font/alef_regular"
            android:layout_margin="5dp"
            android:background="@drawable/button_selector"
            android:textAllCaps="false"
            android:padding="5dp"
            android:id="@+id/medium_button"
            android:layout_toEndOf="@id/easy_button"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hardTxt"
            android:textStyle="bold"
            android:textSize="25sp"
            android:textAllCaps="false"
            android:fontFamily="@font/alef_regular"
            android:layout_margin="5dp"
            android:background="@drawable/button_selector"
            android:id="@+id/hard_button"
            android:layout_toEndOf="@id/medium_button"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/timerModeTxt"
            android:textStyle="bold"
            android:textSize="25sp"
            android:textAllCaps="false"
            android:fontFamily="@font/alef_regular"
            android:layout_marginVertical="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginStart="80dp"
            android:padding="5dp"
            android:background="@drawable/button_selector"
            android:id="@+id/timer_button"
            android:layout_below="@id/medium_button"/>
    </RelativeLayout>
    <!--<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/table_shape">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/rank_txt"
            android:textAlignment="center"
            android:layout_margin="10dp"
            android:textSize="25sp"
            android:textStyle="bold"
            android:fontFamily="@font/ketchup_font"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/nameTxt"
            android:textAlignment="center"
            android:layout_margin="10dp"
            android:textSize="25sp"
            android:textStyle="bold"
            android:fontFamily="@font/ketchup_font"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/scoreTxt"
            android:textAlignment="center"
            android:layout_margin="10dp"
            android:textSize="25sp"
            android:textStyle="bold"
            android:fontFamily="@font/ketchup_font"/>
    </LinearLayout>-->
    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/table_shape"
        android:layout_margin="10dp"
        android:padding="10dp"
        android:textAlignment="center"
        android:layout_gravity="center"
        android:foregroundGravity="center"
        tools:listheader="@layout/table_header"
        android:id="@+id/leadersTable"/>
</LinearLayout>